--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link rel="stylesheet" href="bootstrap.css">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
 	<title>Jhonnatan Rangel</title>
 </head>
 <body>
 
+	<!-- START NAV -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">Navbar</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,6 +51,28 @@
 			</form>
 		</div>
 	</nav>
+	<!-- END NAV -->
+
+	<!-- START WELCOME SECTION -->
+
+		<header class="masthead  text-white text-center">
+			<div class="container d-flex align-items-center flex-column">
+					<!-- Masthead Avatar Image-->
+					<img class="masthead-avatar mb-5" src="img/profile.png" alt="profile" />
+					<!-- Masthead Heading-->
+					<h1 class="masthead-heading text-uppercase mb-0">Jhonnatan Rangel</h1>
+					<!-- Icon Divider-->
+					<div class="divider-custom divider-light">
+							<div class="divider-custom-line"></div>
+							<div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+							<div class="divider-custom-line"></div>
+					</div>
+					<!-- Masthead Subheading-->
+					<p class="masthead-subheading font-weight-light mb-0 text-danger">Graphic Artist - Web Designer - Illustrator</p>
+			</div>
+	</header>
+
+	<!-- END WELCOME SECTION -->
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
