--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</nav>
 	<!-- END NAV -->
 
-	<!-- START WELCOME SECTION -->
+	<!-- START HEADER SECTION -->
 
 		<header class="masthead  text-white text-center">
 			<div class="container d-flex align-items-center flex-column">
@@ -72,7 +72,34 @@
 			</div>
 	</header>
 
-	<!-- END WELCOME SECTION -->
+	<!-- END HEADER SECTION -->
+
+	<header class="masthead  text-white text-center">
+		<div class="container d-flex align-items-center flex-column">
+				<!-- Masthead Avatar Image-->
+				<img class="masthead-avatar mb-5" src="img/profile.png" alt="profile" />
+				<!-- Masthead Heading-->
+				<h1 class="masthead-heading text-uppercase mb-0">Jhonnatan Rangel</h1>
+				<!-- Icon Divider-->
+				<div class="divider-custom divider-light">
+						<div class="divider-custom-line"></div>
+						<div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+						<div class="divider-custom-line"></div>
+				</div>
+				<!-- Masthead Subheading-->
+				<p class="masthead-subheading font-weight-light mb-0 text-danger">Graphic Artist - Web Designer - Illustrator</p>
+		</div>
+</header>
+
+<!-- START FOOTER SECTION -->
+
+<footer class="footer bottom">
+  <p>
+    &copy; Jhonnatan Rangel 2021
+  </p>
+</footer>
+
+<!-- END FOOTER SECTION -->
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
