--- a/index.html
+++ b/index.html
@@ -74,28 +74,36 @@
 
 	<!-- END HEADER SECTION -->
 
-	<header class="masthead  text-white text-center">
-		<div class="container d-flex align-items-center flex-column">
-				<!-- Masthead Avatar Image-->
-				<img class="masthead-avatar mb-5" src="img/profile.png" alt="profile" />
-				<!-- Masthead Heading-->
-				<h1 class="masthead-heading text-uppercase mb-0">Jhonnatan Rangel</h1>
-				<!-- Icon Divider-->
-				<div class="divider-custom divider-light">
-						<div class="divider-custom-line"></div>
-						<div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-						<div class="divider-custom-line"></div>
-				</div>
-				<!-- Masthead Subheading-->
-				<p class="masthead-subheading font-weight-light mb-0 text-danger">Graphic Artist - Web Designer - Illustrator</p>
-		</div>
-</header>
+	 <!-- START ABOUT SECTION-->
+
+		<!-- END ABOUT SECTION-->
+
+
+		<section class="page-section transition text-white mb-0" id="about">
+			<div class="container">
+					<!-- About Section Heading-->
+					<h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+					<!-- Icon Divider-->
+					<div class="divider-custom divider-light">
+					</div>
+					<!-- About Section Content-->
+					<div class="row">
+							<div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+							<div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+					</div>
+			</div>
+	</section>
+
+
+
+
+
 
 <!-- START FOOTER SECTION -->
 
 <footer class="footer bottom">
   <p>
-    &copy; Jhonnatan Rangel 2021
+    &copy; <span id="copyright-year">2021</span> Jhonnatan Rangel 
   </p>
 </footer>
 
@@ -104,5 +112,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+	<!-- Copyright year script -->
+	<script> document.querySelector("#copyright-year").innerText=new Date().getFullYear();</script>
 </body>
 </html>
