add images to miniatures

--- a/software.html
+++ b/software.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/07ff07af43.js" crossorigin="anonymous"></script>
-	<title>Jhonnatan Rangel</title>
+	<title>Software Development</title>
 </head>
 <body>
 
@@ -290,7 +290,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Social Media App</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -298,7 +298,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/whispaw.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
@@ -324,7 +324,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Market Place</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -332,7 +332,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/marketplace.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
@@ -358,7 +358,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Circus Tent</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Landing Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -366,7 +366,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/yiadore.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
@@ -392,7 +392,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Controller</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Product Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -400,7 +400,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/divertiplay.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
@@ -426,7 +426,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Locked Safe</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Product Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -434,7 +434,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/surfing.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
@@ -460,7 +460,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Submarine</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Survey Form</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -468,7 +468,7 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="img/survey.jpg" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
