--- a/software.html
+++ b/software.html
@@ -298,13 +298,9 @@
                                       <div class="divider-custom-line"></div>
                                   </div>
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="img/whispaw.jpg" alt="" />
+                                  <a href="https://whispaw.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5"  src="img/whispaw.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                  <button class="btn btn-primary" data-dismiss="modal">
-                                      <i class="fas fa-times fa-fw"></i>
-                                      Close Window
-                                  </button>
                               </div>
                           </div>
                       </div>
