--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				</div>
 				<!-- About Section Content-->
 				<div class="row">
-						<div class="col-lg-4 ml-auto"><p class="lead">I'm a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS). I'm also a software developer in the making. I love all things languages, both human and computer.</p></div>
+						<div class="col-lg-4 ml-auto"><p class="lead">I'm a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS). I do software development and I love all things languages, both human and computer.</p></div>
 						<div class="col-lg-4 mr-auto"><p class="lead">I specialize in variation, documentation and revitalization of critically endangered languages, as well as speech processing. I help communities and organizations to develop language and technology projects.</p></div>
 				</div>
 		</div>
