--- a/about.html
+++ b/about.html
@@ -60,9 +60,10 @@
 				</div>
 				<!-- About Section Content-->
 				<div class="row">
-          <img class="masthead-avatar mb-5" id="avatar-about" src="img/profile.png" alt="profile" />
-						<div class="col-lg-4 ml-auto"><p class="lead">I'm a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS). I do software development and I love all things languages, both human and computer.</p></div>
-						<div class="col-lg-4 mr-auto"><p class="lead">I specialize in variation, documentation and revitalization of critically endangered languages, as well as speech processing. I help communities and organizations to develop language and technology projects.</p></div>
+          <img class="masthead-avatar mb-5" id="avatar-about" src="img/profile-white.png" alt="profile" />
+						<div class="col-lg-4 ml-auto"><p class="lead">Hi, I'm Jhonnatan, a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS) in Paris. My interest in language goes beyond any theory and I specialize in variation, documentation and revitalization of critically endangered languages, as well as speech processing for low-resourced languages. I'm a mixe-zoque specialist and I help communities and organizations to develop language and software projects.</p></div>
+            <div class="col-lg-4 mr-auto"><p class="lead"> I do software development and I love all things languages, both human and computer. Over the last 7 years, I have been an active collaborator in a community-driven language project in rural Mexico. I'm an avid science communicator and I firmly believe that science should be opened and shared with everyone.</p>
+            </div>
 				</div>
 		</div>
 </section>
