change about header

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 	
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="about.html">About
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
+					<a class="nav-link" href="about.html">About</a>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
 					<div class="dropdown-menu">
@@ -73,20 +69,13 @@
 
 	<!-- START ABOUT SECTION-->
 
-	<section class="page-section transition text-white mb-5" id="about">
-		<div class="container">
-				<!-- About Section Heading-->
-				<h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
-				<!-- Icon Divider-->
-				<div class="divider-custom divider-light">
-				</div>
-				<!-- About Section Content-->
-				<div class="row">
-						<div class="col-lg-4 ml-auto"><p class="lead">I'm a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS). I do software development and I love all things languages, both human and computer.</p></div>
-						<div class="col-lg-4 mr-auto"><p class="lead">I specialize in variation, documentation and revitalization of critically endangered languages, as well as speech processing. I help communities and organizations to develop language and technology projects.</p></div>
-				</div>
-		</div>
-</section>
+<div class="card  text-center mx-auto mb-5" style="max-width: 75rem">
+  <div class="card-body">
+    <h5 class="card-title">Thanks for stopping by! I'm a postdoctoral linguist and developer in the making.</h5>
+    <!--<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>-->
+    <a href="about.html" class="btn btn-danger">More about me</a>
+  </div>
+</div>
 
 <!-- END ABOUT SECTION-->
 
