--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 						<a class="dropdown-item" href="grants.html">Grants</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="research.html">Contact</a>
+					<a class="nav-link" href="contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -47,7 +47,7 @@
 
 	<!-- START ABOUT SECTION-->
 
-	<section class="page-section transition text-white mb-5" id="about">
+	<section class="page-section transition text-white mb-3" id="about">
 		<div class="container">
 				<!-- About Section Heading-->
 				<h2 class="page-section-heading text-center text-uppercase text-white">About me</h2>
@@ -65,6 +65,23 @@
 </section>
 
 <!-- END ABOUT SECTION-->
+
+
+<!-- START CONTACT SECTION -->
+
+<section id="contact" class="contact-section">
+  <div class="contact-links">
+    <a id="profile-link" href="https://github.com/jhon-ran" target="_blank" class="btn contact-details"><i class="fab fa-github"></i></a>
+    <a href="https://twitter.com/Jo_ran_" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.linkedin.com/in/jhonnatan-rangel/" target="_blank" class="btn contact-details"><i class="fab fa-linkedin"></i></a>
+		<a href="https://medium.com/@jorangel" target="_blank" class="btn contact-details"><i class="fab fa-medium-m"></i></a>
+		<a href="https://wils.hypotheses.org/" target="_blank" class="btn contact-details"><i class="fas fa-blog"></i></a>
+		<a href="https://hal.archives-ouvertes.fr/search/index/q/*/authIdHal_s/jhonnatan-rangel" target="_blank" class="btn contact-details"><i class="fas fa-book-open"></i></a>
+		<a href="https://inalco.academia.edu/jhonnatanrangel" target="_blank" class="btn contact-details"><i class="fas fa-font"></i></a>
+  </div>
+</section>
+
+<!-- END CONTACT SECTION -->
 
 		
 
