--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,7 @@
 	
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="about.html">About
-						<span class="sr-only">(current)</span>
-					</a>
+					<a class="nav-link" href="about.html">About</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
@@ -36,8 +33,10 @@
 						<a class="dropdown-item" href="outreach.html">Outreach</a>
 						<a class="dropdown-item" href="grants.html">Grants</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="research.html">Contact</a>
+				<li class="nav-item active">
+					<a class="nav-link" href="research.html">Contact
+						<span class="sr-only">(current)</span>
+					</a>
 				</li>
 			</ul>
 		</div>
