edit text of web developement projects

--- a/software.html
+++ b/software.html
@@ -11,118 +11,109 @@
 </head>
 <body>
 
-	<!-- START NAV -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-	
-		<div class="collapse navbar-collapse" id="navbarColor02">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Features</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Pricing</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Separated link</a>
-					</div>
-				</li>
-			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="text" placeholder="Search">
-				<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-			</form>
-		</div>
-	</nav>
-	<!-- END NAV -->
+<!-- START NAV -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<a class="navbar-brand" href="index.html"><i class="fas fa-home"></i></a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarColor02">
+		<ul class="navbar-nav mr-auto">
+				<a class="nav-link" href="about.html">About</a>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
+				<div class="dropdown-menu">
+					<a class="dropdown-item" href="software.html">Software Development</a>
+					<a class="dropdown-item" href="research.html">Research</a>
+					<a class="dropdown-item" href="presentations.html">Presentations & Publications</a>
+					<a class="dropdown-item" href="fieldwork.html">Fieldwork</a>
+					<a class="dropdown-item" href="community.html">Community Projects</a>
+					<a class="dropdown-item" href="outreach.html">Outreach</a>
+					<a class="dropdown-item" href="grants.html">Grants</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="contact.html">Contact</a>
+			</li>
+		</ul>
+		<form class="form-inline my-2 my-lg-0">
+			<input class="form-control mr-sm-2" type="text" placeholder="Search">
+			<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+		</form>
+	</div>
+</nav>
+<!-- END NAV -->
 
 
 <!-- START PORTFOLIO SECTION-->
 <section class="page-section portfolio" id="portfolio">
-  <div class="container">
-      <!-- Portfolio Section Heading-->
-      <h2 class="page-section-heading text-center text-uppercase text-danger mb-0">Projects</h2>
-      <!-- Icon Divider-->
-      <div class="divider-custom">
-          <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star main-color"></i></div>
-          <div class="divider-custom-line"></div>
-      </div>
-      <!-- Portfolio Grid Items-->
-      <div class="row justify-content-center">
-          <!-- Portfolio Item 1-->
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/whispaw.jpg" alt="" />
-              </div>
-          </div>
-          <!-- Portfolio Item 2-->
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/marketplace.jpg" alt="" />
-              </div>
-          </div>
-          <!-- Portfolio Item 3-->
-          <div class="col-md-6 col-lg-4 mb-5">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/yiadore.jpg" alt="" />
-              </div>
-          </div>
-          <!-- Portfolio Item 4-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/divertiplay.jpg" alt="" />
-              </div>
-          </div>
-          <!-- Portfolio Item 5-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/surfing.jpg" alt="" />
-              </div>
-          </div>
-          <!-- Portfolio Item 6-->
-          <div class="col-md-6 col-lg-4">
-              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                  </div>
-                  <img class="img-fluid" src="img/survey.jpg" alt="" />
-              </div>
-          </div>
-      </div>
-  </div>
+		<div class="container">
+				<!-- Portfolio Section Heading-->
+				<h2 class="page-section-heading text-center text-uppercase text-danger mb-0">Web Development Projects</h2>
+				<!-- Icon Divider-->
+				<div class="divider-custom">
+						<div class="divider-custom-line"></div>
+						<div class="divider-custom-icon"><i class="fas fa-star main-color"></i></div>
+						<div class="divider-custom-line"></div>
+				</div>
+				<!-- Portfolio Grid Items-->
+				<div class="row justify-content-center">
+						<!-- Portfolio Item 1-->
+						<div class="col-md-6 col-lg-4 mb-5">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/whispaw.jpg" alt="" />
+								</div>
+						</div>
+						<!-- Portfolio Item 2-->
+						<div class="col-md-6 col-lg-4 mb-5">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/marketplace.jpg" alt="" />
+								</div>
+						</div>
+						<!-- Portfolio Item 3-->
+						<div class="col-md-6 col-lg-4 mb-5">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/yiadore.jpg" alt="" />
+								</div>
+						</div>
+						<!-- Portfolio Item 4-->
+						<div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/divertiplay.jpg" alt="" />
+								</div>
+						</div>
+						<!-- Portfolio Item 5-->
+						<div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/surfing.jpg" alt="" />
+								</div>
+						</div>
+						<!-- Portfolio Item 6-->
+						<div class="col-md-6 col-lg-4">
+								<div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+										<div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+												<div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+										</div>
+										<img class="img-fluid" src="img/survey.jpg" alt="" />
+								</div>
+						</div>
+				</div>
+		</div>
 </section>
 
 <!-- END PORTFOLIO SECTION-->
@@ -152,7 +143,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="https://whispaw.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5"  src="img/whispaw.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Whispaw is a social media web application that allows users to connect & match with each other. It's the Tinder of pets! Technolgies: Ruby, Rails, PostGreSQL. APIs: AS3, SendGrid & Mapbox </p>
                                 <a class="btn btn-danger btn-lg" href="https://whispaw.herokuapp.com/" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -183,7 +174,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="https://arcane-basin-51216.herokuapp.com/" target="_blank"><img class="img-fluid rounded mb-5" src="img/marketplace.jpg" alt="" /></a>>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Chatons Lovers is a marketplace to get the cutest cat photos on Internet! Technolgies: Ruby, Rails, PostGreSQL. APIs: AS3 & SendGrid</p>
                                   <a class="btn btn-danger btn-lg" href="https://arcane-basin-51216.herokuapp.com/" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -214,7 +205,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="https://jhon-ran.github.io/yiadore/" target="_blank"><img class="img-fluid rounded mb-5" src="img/yiadore.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Landing page for a fair trade fashion brand located in Mexico. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://jhon-ran.github.io/yiadore/" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -245,7 +236,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="http://www.divertiplay.tk" target="_blank"><img class="img-fluid rounded mb-5" src="img/divertiplay.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Product page for a local company in Mexico dedicated to renting bounce houses & party supplies. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="http://www.divertiplay.tk/" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -276,7 +267,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="https://jhon-ran.github.io/MySurfingProject/" target="_blank"><img class="img-fluid rounded mb-5" src="img/surfing.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Product page for a proof of concept. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://jhon-ran.github.io/MySurfingProject/" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -307,7 +298,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <a href="https://codepen.io/jo_ran/full/eYdGGbb" target="_blank"><img class="img-fluid rounded mb-5" src="img/survey.jpg" alt="" /></a>
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Proof of concept for a survey. Technologies: HML, CSS & Bootstrap.</p>
                                   <a class="btn btn-danger btn-lg" href="https://codepen.io/jo_ran/full/eYdGGbb" role="button" target="_blank">View here</a>
                               </div>
                           </div>
@@ -323,9 +314,9 @@
 <!-- START FOOTER SECTION -->
 
 <footer class="footer bottom">
-  p>
-  	&copy; <span id="copyright-year">2021</span> Jhonnatan Rangel 
-  </p>
+<p>
+    &copy; <span id="copyright-year">2021</span> Jhonnatan Rangel 
+</p>
 </footer>
 
 <!-- END FOOTER SECTION -->
