--- a/software.html
+++ b/software.html
@@ -49,7 +49,7 @@
 <section class="page-section portfolio" id="portfolio">
 		<div class="container">
 				<!-- Portfolio Section Heading-->
-				<h2 class="page-section-heading text-center text-uppercase text-danger mb-0">Web Development Projects</h2>
+				<h2 class="page-section-heading text-center text-uppercase text-danger mb-0">Web Dev Projects</h2>
 				<!-- Icon Divider-->
 				<div class="divider-custom">
 						<div class="divider-custom-line"></div>
@@ -133,7 +133,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger px-5 text-uppercase mb-0" id="portfolioModal1Label">Social Media App</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal1Label">Social Media App</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
