--- a/software.html
+++ b/software.html
@@ -164,7 +164,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger text-uppercase mb-0" id="portfolioModal2Label">Market Place</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal2Label">Market Place</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -195,7 +195,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger text-uppercase mb-0" id="portfolioModal3Label">Landing Page</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal3Label">Landing Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -226,7 +226,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger text-uppercase mb-0" id="portfolioModal4Label">Product Page</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal4Label">Product Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -257,7 +257,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger text-uppercase mb-0" id="portfolioModal5Label">Product Page</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal5Label">Product Page</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
@@ -288,7 +288,7 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-danger text-uppercase mb-0" id="portfolioModal6Label">Survey Form</h2>
+                                  <h2 class="portfolio-modal-title text-danger px-3 text-uppercase mb-0" id="portfolioModal6Label">Survey Form</h2>
                                   <!-- Icon Divider-->
                                   <div class="divider-custom">
                                       <div class="divider-custom-line"></div>
