--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 						<a class="dropdown-item" href="presentations.html">Presentations & Publications</a>
 						<a class="dropdown-item" href="fieldwork.html">Fieldwork</a>
 						<a class="dropdown-item" href="community.html">Community Projects</a>
-						<a class="dropdown-item" href="outreach.html">Outreach</a>
+						<a class="dropdown-item" href="communication.html">Science Communication</a>
 						<a class="dropdown-item" href="grants.html">Grants</a>
 				</li>
 				<li class="nav-item">
