--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
 						<a class="dropdown-item" href="presentations.html">Presentations & Publications</a>
 						<a class="dropdown-item" href="fieldwork.html">Fieldwork</a>
 						<a class="dropdown-item" href="community.html">Community Projects</a>
-						<a class="dropdown-item" href="outreach.html">Outreach</a>
+						<a class="dropdown-item" href="communication.html">Science Communication</a>
 						<a class="dropdown-item" href="grants.html">Grants</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="research.html">Contact
+					<a class="nav-link" href="contact.html">Contact
 						<span class="sr-only">(current)</span>
 					</a>
 				</li>
