change about me text & pic

--- a/about.html
+++ b/about.html
@@ -47,22 +47,21 @@
 
 	<!-- START ABOUT SECTION-->
 
-	<section class="page-section transition text-white mb-3" id="about">
-		<div class="container">
-				<!-- About Section Heading-->
-				<h2 class="page-section-heading text-center text-uppercase text-white">About me</h2>
-				<!-- Icon Divider-->
-				<div class="divider-custom divider-light">
-				</div>
-				<!-- About Section Content-->
-				<div class="row">
-          <img class="masthead-avatar mb-5" id="avatar-about" src="img/profile-white.png" alt="profile" />
-						<div class="col-lg-4 ml-auto"><p class="lead">Hi, I'm Jhonnatan, a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS) in Paris. My interest in language goes beyond any theory and I specialize in variation, documentation and revitalization of critically endangered languages, as well as speech processing for low-resourced languages. I'm a mixe-zoque specialist and I help communities and organizations to develop language and software projects.</p></div>
-            <div class="col-lg-4 mr-auto"><p class="lead"> I do software development and I love all things languages, both human and computer. Over the last 7 years, I have been an active collaborator in a community-driven language project in rural Mexico. I'm an avid science communicator and I firmly believe that science should be opened and shared with everyone.</p>
-            </div>
-				</div>
-		</div>
-</section>
+
+
+
+<div class="card text-white transition mb-3 mx-auto" style="max-width: 100%;">
+  <div class="card-body mb-3 mx-4">
+		<h1 class="card-title text-center mb-5">ABOUT ME</h1>
+		<img src="img/profile-white.png" class="rounded mx-auto d-block" id="about-photo" alt="profile"/>
+		<p class="card-text font-about">Hi, I'm Jhonnatan, a first generation PhD in linguistics and a postdoctoral researcher at the SeDyL (CNRS) in Paris. I am a mixe-zoque specialist and my research focuses on variation, documentation and revitalization of critically endangered languages.</p>
+		<p class="card-text font-about">I am passionate about helping communities and organizations develop language and technology projects, and have been an active collaborator in a community-driven language project in rural Mexico since 2013. I'm an avid science communicator and firmly believe that science should be open to all and shared widely.</p>
+		<p class="card-text font-about">I love all things language, both human and computer, and my interests go beyond any one theory. I’ve been developing software since 2017 and am excited about the intersection of language and tech, specifically speech processing for low-resourced languages. I’m eager to connect with others who share these passions!</p>
+  </div>
+</div>
+
+
+
 
 <!-- END ABOUT SECTION-->
 
