--- a/presentations.html
+++ b/presentations.html
@@ -83,12 +83,25 @@
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Experiencias de revitalización del zoque ayapaneco". IV Congreso Internacional: Formación en Educación y Docencia Intercultural en América Latina. FES-Aragón-UNAM, Ciudad de México, August 14-16. <a href="https://hal.archives-ouvertes.fr/hal-02310448" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Principios de variación lingüística". Universidad Interculural del Estado de Tabasco, México, August 8. <a href="https://www.academia.edu/40181054/Principios_de_variaci%C3%B3n_ling%C3%BC%C3%ADstica" target="_blank"> [Available here]</a></p>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Langues en danger: le cas de l’ayapaneco". Journée de découverte des langues et cultures autochtones des Amériques, Maison du Mexique, Paris, May 25. <a href="https://hal.archives-ouvertes.fr/hal-02166046" target="_blank"> [Available here]</a></p>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. Plenary conference: "Diversidad lingüística y lenguas en riesgo de desaparición". Foro de Lenguas y Culturas Originarias, UJAT, Tabasco, February 20. <a href="https://hal.archives-ouvertes.fr/hal-02166067" target="_blank"> [Available here]</a></p>
+		<p class="card-text reference-indent">Rangel, Jhonnatan. 2018. "Les acteurs et les enjeux face à la revitalisation d’une langue sérieusement en danger au Mexique : le cas ayapaneco". Journées de Revitalisation linguistique : Acteurs et Pratiques dans les Amériques et en Europe,  Maison de la recherche, Paris, October 2. <a href="https://hal.archives-ouvertes.fr/hal-01949627" target="_blank"> [Available here]</a></p>
 	</div>
+</div>
 </div>
 
 
 <!-- END PRESENTATIONS-->
 
+<!-- START CONFERENCE ORGANIZATION-->
+
+<div class="card text-white mb-3 mx-auto" style="max-width: 75rem;">
+	<div class="card-body mb-3 mx-4">
+		<h1 class="card-title text-center text-danger mb-5">CONFERENCE ORGANIZATION</h1>
+		<p class="card-text reference-indent"> Veronique Acking, Houssamoudine Ankili, Suat Istanbullu, Gilles Martinet, Aïda Ramirez Romero, Jhonnatan Rangel (Co-organizers). 2018. "La voix des «acteurs de terrain» en contexte asymétrique: quels enjeux de positionnement, légitimité et représentativité pour un.e jeune chercheur·ses?". Colloque des Doctorants de la Fédération Sciences Sociales Suds (CODOFE), Université Paris-Diderot, Paris, November 22-23. <a href="https://www.academia.edu/37449579/De_la_voix_des_enqu%C3%AAt%C3%A9s_%C3%A0_la_voix_du_chercheur_Les_processus_de_construction_de_l%C3%A9gitimit%C3%A9_du_jeune_chercheur" target="_blank"> [Available here]</a></p>
+	</div>
+</div>
+
+<!-- END CONFERENCE ORGANIZATION-->
 
 <!-- START CONTACT SECTION -->
 
