change font size of titles

--- a/presentations.html
+++ b/presentations.html
@@ -62,8 +62,8 @@
 <!-- START PROCEEDINGS-->
 
 <div class="card text-white mb-3 mx-auto" style="max-width: 75rem;">
-	<div class="card-body mb-3 mx-1">
-		<h2 class="card-title text-center text-danger text-uppercase mb-5">Conference proceedings</h2>
+	<div class="card-body mb-3 mx-4">
+		<h2 class="card-title text-center text-danger reference-title text-uppercase mb-5">Conference proceedings</h2>
 		<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Challenges for language technologies in critically endangered languages". Proceedings of the International Conference LT4All, December 4-6, UNESCO, Paris. <a href="https://lt4all.elra.info/media/papers/O10/118.html" target="_blank"> [Available here]</a></p>
 	</div>
 </div>
