add mt-3 to publications

--- a/presentations.html
+++ b/presentations.html
@@ -26,7 +26,7 @@
 					</a>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
+					<a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Work</a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="software.html">Software Development</a>
 						<a class="dropdown-item" href="research.html">Research</a>
@@ -47,7 +47,7 @@
 
 	<!-- START PUBLICATIONS-->
 
-	<div class="card text-white mb-3 mx-auto" style="max-width: 85rem;">
+	<div class="card text-white mb-3 mt-3 mx-auto" style="max-width: 85rem;">
 		<div class="card-body mb-3 mx-4">
 			<h2 class="card-title text-center text-danger mb-5">Publications</h2>
 			<p class="card-text reference-indent">Rangel, Jhonnatan. 2019. "Variations linguistiques et langue en danger. Le cas du numte ʔoote ou zoque ayapaneco dans l’Etat de Tabasco, Mexique" (thèse de doctorat). Institut National des Langues et Civilisations Orientales (INALCO), Paris, France. <a href="https://tel.archives-ouvertes.fr/tel-03004941" target="_blank"> [Available here]</a></p>
